--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngf-bootstrap/dist/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+             
+           
+            ]
           },
           "configurations": {
             "production": {
